<?xml version="1.0" encoding="utf-8"?>

<!--Disponemos un LinearLayout y dentro del mismo dos RelativeLayout.
    El segundo RelativeLayout lo utilizamos básicamente para cambiar el color de fondo
    al pulsar el botón "fondo rojo"

    Además de los elementos solicitados en la actividad, añadimos un Switch y un SeekBar.
    El Switch activa y desactiva el RatingBar, cambiando su propio texto.
    El SeekBar puede arrastrarse de manera que va indicando el progreso en el ProgressBar
    y en el TextView en %

    Todos los textos se han introducido en el archivo strings.xml-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_views_test"
        android:layout_weight="0.45">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_red_background"
            android:text="@string/button_red_background"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_black_font"
            android:text="@string/button_black_font"
            android:layout_below="@id/bt_red_background"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_show_text"
            android:layout_below="@id/bt_black_font"
            android:text="@string/checkbox_show_text"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hidden_message"
            android:text="@string/textview_hidden_message"
            android:layout_toRightOf="@id/cb_show_text"
            android:layout_below="@id/bt_black_font"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@id/cb_show_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ask_long_click"
            android:text="@string/textview_ask_long_click"
            android:layout_marginStart="5dp"
            android:paddingTop="25dp"
            android:layout_below="@id/cb_show_text"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <Switch
            android:id="@+id/sw_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ask_long_click"
            android:layout_alignParentBottom="true"
            android:text="@string/rate_false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_rating_bar"
        android:layout_weight="0.55">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_five_stars"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rating_value"
            android:text="@string/textview_default_rating"
            android:layout_below="@id/rb_five_stars"
            android:layout_centerInParent="true"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_progress"
            android:text="0%"
            android:layout_below="@id/tv_rating_value"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pb_progress_bar"
            android:layout_below="@id/tv_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sb_seek_bar"
            android:layout_below="@id/pb_progress_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_seek_bar_note"
            android:layout_below="@id/sb_seek_bar"
            android:text="@string/seek_bar_note"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</LinearLayout>